Update tenant status on approval rejection and adjust approval flow
- Update `tenantRepo` to set tenant status to `CANCELLED` when approval is rejected.
- Use `nodes.getFirst()` instead of `nodes.get(0)` for getting the first approval node.